add module-info.java and make codebase compile