@@ -1535,7 +1535,7 @@ public abstract class JSONLexerBase implements JSONLexer, Closeable {
             return list2;
         } else {
             try {
-                Collection<String> list = (Collection<String>) type.newInstance();
+                Collection<String> list = (Collection<String>) type.getDeclaredConstructor().newInstance();
                 return list;
             } catch (Exception e) {
                 throw new JSONException(e.getMessage(), e);
