@@ -53,7 +53,7 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
     protected boolean             browserCompatible;
 
     private RuntimeSerializerInfo runtimeInfo;
-    
+
     public FieldSerializer(Class<?> beanType, FieldInfo fieldInfo) {
         this.fieldInfo = fieldInfo;
         this.fieldContext = new BeanContext(beanType, fieldInfo);
@@ -74,7 +74,7 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
                 }
             }
         }
-        
+
         fieldInfo.setAccessible();
 
         this.double_quoted_fieldPrefix = '"' + fieldInfo.name + "\":";
@@ -106,10 +106,10 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
                     browserCompatible = true;
                 }
             }
-            
+
             features = SerializerFeature.of(annotation.serialzeFeatures());
         }
-        
+
         this.writeNull = writeNull;
 
         persistenceXToMany = TypeUtils.isAnnotationPresentOneToMany(fieldInfo.method)
@@ -155,11 +155,11 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
         }
         return propertyValue;
     }
-    
+
     public int compareTo(FieldSerializer o) {
         return this.fieldInfo.compareTo(o.fieldInfo);
     }
-    
+
 
     public void writeValue(JSONSerializer serializer, Object propertyValue) throws Exception {
         if (runtimeInfo == null) {
@@ -175,7 +175,7 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
             JSONField fieldAnnotation = fieldInfo.getAnnotation();
 
             if (fieldAnnotation != null && fieldAnnotation.serializeUsing() != Void.class) {
-                fieldSerializer = (ObjectSerializer) fieldAnnotation.serializeUsing().newInstance();
+                fieldSerializer = (ObjectSerializer) fieldAnnotation.serializeUsing().getDeclaredConstructor().newInstance();
                 serializeUsing = true;
             } else {
                 if (format != null) {
@@ -193,9 +193,9 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
 
             runtimeInfo = new RuntimeSerializerInfo(fieldSerializer, runtimeFieldClass);
         }
-        
+
         final RuntimeSerializerInfo runtimeInfo = this.runtimeInfo;
-        
+
         final int fieldFeatures = disableCircularReferenceDetect?
                 (fieldInfo.serialzeFeatures|SerializerFeature.DisableCircularReferenceDetect.getMask()):fieldInfo.serialzeFeatures;
 
@@ -247,7 +247,7 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
                 return;
             }
         }
-        
+
         Class<?> valueClass = propertyValue.getClass();
         ObjectSerializer valueSerializer;
         if (valueClass == runtimeInfo.runtimeFieldClass || serializeUsing) {
@@ -255,10 +255,10 @@ public class FieldSerializer implements Comparable<FieldSerializer> {
         } else {
             valueSerializer = serializer.getObjectWriter(valueClass);
         }
-        
+
         if (format != null && !(valueSerializer instanceof DoubleSerializer || valueSerializer instanceof FloatCodec)) {
             if (valueSerializer instanceof ContextObjectSerializer) {
-                ((ContextObjectSerializer) valueSerializer).write(serializer, propertyValue, this.fieldContext);    
+                ((ContextObjectSerializer) valueSerializer).write(serializer, propertyValue, this.fieldContext);
             } else {
                 serializer.writeWithFormat(propertyValue, format);
             }
